<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dip"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/resultid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/select_player"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/upplayername"
            android:layout_weight="0.40">
        </EditText>
    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole1et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore1"
            />

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole10et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore10" />

    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole2et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore2" />

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole11et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore11"/>

    </LinearLayout>
    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole3et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore3"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole12et" />
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore12"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole4et" />
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore4"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole13et" />
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore13"/>

    </LinearLayout>
    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole5et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore5"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole14et" />
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore14"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole6et" />
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore6"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole15et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore15" />

    </LinearLayout>
    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole7et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore7"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole16et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore16"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole8et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore8"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole17et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore17"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LLEditCourse">

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole9et"/>
        <EditText
            style="@style/EditCourse"
            android:nextFocusDown="@id/upscore10"
            android:id="@+id/upscore9"/>

        <TextView
            style="@style/EditCourseTV"
            android:text="@string/hole18et"/>
        <EditText
            style="@style/EditCourse"
            android:id="@+id/upscore18"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/updateresultbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/update_result" />

        <Button
            android:id="@+id/deleteresultbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/delete_result"/>

    </LinearLayout>

</LinearLayout>